--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "nodemon": "^1.18.3",
     "prettier": "^1.14.2",
     "rimraf": "^2.6.2",
+    "sinon": "^9.0.2",
+    "sinon-chai": "^3.5.0",
     "supertest": "^3.1.0",
     "ts-loader": "^4.4.2",
     "ts-node": "^7.0.1",
