--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "author": "Dennis",
   "license": "MIT",
   "scripts": {
+    "build": "tsc --build",
+    "clean": "rimraf dist",
     "format": "prettier --write \"src/**/*.ts\"",
     "start": "ts-node -r tsconfig-paths/register src/main.ts",
     "start:dev": "nodemon",
